--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:theme="@style/Theme.ArvigoBaseCore"
         tools:targetApi="31">
         <activity
+            android:name=".ui.register.RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.ArvigoBaseCore" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.ArvigoBaseCore" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
