--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:theme="@style/Theme.ArvigoBaseCore"
         tools:targetApi="31">
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".ui.feature.register.RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.ArvigoBaseCore" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.feature.login.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.ArvigoBaseCore" />
