--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     //navigation
     implementation "androidx.navigation:navigation-compose:2.5.2"
+    //carousel
+    implementation 'com.google.accompanist:accompanist-pager:0.20.0'
+    implementation("io.coil-kt:coil-compose:2.3.0")
+    implementation "androidx.compose.ui:ui-util:$compose_version"
 }
