--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     //navigation
     implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.2'
+    // tab layout
+    implementation "com.google.accompanist:accompanist-pager:0.23.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.23.0"
 }
