--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+
+    //ui
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -77,7 +81,9 @@ dependencies {
     //navigation
     implementation "androidx.navigation:navigation-compose:2.5.2"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.2'
-    // tab layout
+    //Tab Layout
     implementation "com.google.accompanist:accompanist-pager:0.23.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.23.0"
+    //Coil
+    implementation 'io.coil-kt:coil-compose:2.3.0'
 }
