--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
 
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -86,4 +87,6 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.23.0"
     //Coil
     implementation 'io.coil-kt:coil-compose:2.3.0'
+    // Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
