--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.devtools.ksp' version '1.6.10-1.0.4'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -89,4 +91,7 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.3.0'
     // Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    //compose destination
+    implementation 'io.github.raamcosta.compose-destinations:core:1.5.9-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.9-beta'
 }
