--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,11 @@ dependencies {
     //compose destination
     implementation 'io.github.raamcosta.compose-destinations:core:1.5.9-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.9-beta'
+    //camerax
+    def camerax_version = "1.2.1"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.3.0-alpha04"
+    // Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
