--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
 dependencies {
     def koin_version = "3.2.0"
     def retrofit_version = "2.9.0"
+    def lottieVersion = "6.0.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -101,4 +102,6 @@ dependencies {
     implementation "androidx.camera:camera-view:1.3.0-alpha04"
     // Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    //lottie
+    implementation "com.airbnb.android:lottie-compose:$lottieVersion"
 }
