--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
+        dataBinding true
+    }
+    viewBinding {
+        enabled = true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.2.0'
@@ -97,6 +102,7 @@ dependencies {
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.9-beta'
     //camerax
     def camerax_version = "1.2.1"
+    implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.3.0-alpha04"
@@ -104,4 +110,6 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     //lottie
     implementation "com.airbnb.android:lottie-compose:$lottieVersion"
+    //DeepAR
+    implementation files("../deepar/deepar.aar")
 }
