--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:theme="@style/Theme.ArvigoBaseCore"
         tools:targetApi="31">
         <activity
-            android:name=".ui.feature.deepAR.DeepARActivity"
+            android:name=".ui.feature.deepAR.DeepArActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.AppCompat" />
