--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
+    implementation 'androidx.compose.foundation:foundation-layout:1.0.0-alpha08'
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.appcompat:appcompat:1.6.1'
