--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    <!-- Request MANAGE_EXTERNAL_STORAGE permission -->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="30"
+        tools:ignore="ScopedStorage" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -31,11 +36,6 @@
             android:exported="false"
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.AppCompat" />
-        <activity
-            android:name=".ui.feature.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.ArvigoBaseCore" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
